Don't try to create an account without a name

BUG: 434605
FIXED-IN: 5.1.2